ingress/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ns-dev # shared ingress
  name: ingress-dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: dv-group
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-porb
spec:
  rules:
  - host: dev.genius-tech.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-dev
            port:
              number: 80
